--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ dotnet: 2.2
 script:
  - dotnet build
  
-solution: Lombard.Tests.sln
+solution: Lombard.sln
 install:
-  - nuget restore solution-name.sln
+  - nuget restore Lombard.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Release solution-name.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./MyProject.Tests/bin/Release/MyProject.Tests.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./MyProject.Tests/bin/Release/Lombard.Tests.dll
