--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install:
   - nuget restore Lombard.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
 script:
-  - msbuild /p:Configuration=Release solution-name.sln
+  - msbuild /p:Configuration=Release Lombard.sln
   - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./MyProject.Tests/bin/Release/Lombard.Tests.dll
